--- a/AElf.Net.SDK.Test/AElf.Net.SDK.Test.csproj
+++ b/AElf.Net.SDK.Test/AElf.Net.SDK.Test.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="AElf.Cryptography" Version="0.8.3" />
+        <PackageReference Include="AElf.Runtime.CSharp" Version="0.8.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
         <PackageReference Include="Volo.Abp.Threading" Version="1.0.2" />
         <PackageReference Include="xunit" Version="2.4.1" />
