--- a/AElf.Client/AElf.Client.csproj
+++ b/AElf.Client/AElf.Client.csproj
@@ -4,7 +4,6 @@
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <PackageId>AElf.Client</PackageId>
         <PackageDescription>This is a C# client library, used to communicate with the AElf API.</PackageDescription>
-        <Version>0.1.0</Version>
         <Company>AElf</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
@@ -18,6 +17,10 @@
     <ItemGroup>
         <PackageReference Include="AElf.Types" Version="0.8.3" />
         <PackageReference Include="AElf.Cryptography" Version="0.8.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Protobuf\Generated" />
     </ItemGroup>
 
 </Project>
