--- a/AElf.Client/AElf.Client.csproj
+++ b/AElf.Client/AElf.Client.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Google.Protobuf" Version="3.7.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
+        <PackageReference Include="Grpc.Tools" Version="2.25.0" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
@@ -23,4 +24,12 @@
         <Folder Include="Protobuf\Generated" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Protobuf Include="Protobuf/Proto/client.proto">
+            <GrpcServices>none</GrpcServices>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <GrpcOutputDir>./Protobuf/Generated</GrpcOutputDir>
+            <OutputDir>./Protobuf/Generated</OutputDir>
+        </Protobuf>
+    </ItemGroup>
 </Project>
