--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,17 +2,18 @@ jobs:
 # All tasks on Linux
 - job: build_all_linux
   displayName: Build all tasks (Linux)
+  services:
+    redis:
+      image: redis
+      ports:
+      - 6379:6379
   pool:
     vmImage: ubuntu-16.04
   steps:
   - task: DotNetCoreInstaller@0
     inputs:
       version: '3.1.101'
-  - script: dotnet tool install --global Cake.Tool
-    displayName: 'Install "Cake.Tool" .NET Core global tool'
-  - script: export PATH="$PATH:$HOME/.dotnet/tools"
-  - script: export PATH="$HOME/.dotnet:$PATH"
-  - script: dotnet tool restore
-  - script: dotnet cake ./build.cake --target=build
-  - script: cd  singlecp && bash deploy_aelf.sh
-  - script: dotnet cake ./build.cake --target=test
+  - script: cd singlecp && bash deploy_aelf.sh
+    displayName: 'Deploy a full node'
+  - script: bash build.sh -target=test
+    displayName: 'build and test'
