--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
   - task: DotNetCoreInstaller@0
     inputs:
       version: '3.1.101'
-  - script: cd singlecp && bash deploy_aelf.sh
+  - script: cd scripts/aelf-node && bash start.sh
     displayName: 'Deploy a full node'
   - script: bash build.sh -target=test
     displayName: 'build and test'
