--- a/AElf.Client/AElf.Client.csproj
+++ b/AElf.Client/AElf.Client.csproj
@@ -16,8 +16,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Types" Version="0.9.2" />
-        <PackageReference Include="AElf.Cryptography" Version="0.9.2" />
+        <PackageReference Include="AElf.Types" Version="0.9.3-18347" />
+        <PackageReference Include="AElf.Cryptography" Version="0.9.3-18347" />
     </ItemGroup>
 
     <ItemGroup>
