--- a/AElf.Client/AElf.Client.csproj
+++ b/AElf.Client/AElf.Client.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>AElf.Client</PackageId>
         <PackageDescription>This is a C# client library, used to communicate with the AElf API.</PackageDescription>
         <Company>AElf</Company>
