--- a/AElf.Client/AElf.Client.csproj
+++ b/AElf.Client/AElf.Client.csproj
@@ -9,15 +9,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Google.Protobuf" Version="3.11.4" />
+        <PackageReference Include="Google.Protobuf" Version="3.13.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
         <PackageReference Include="Grpc.Tools" Version="2.28.1" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Types" Version="1.0.0-preview2" />
-        <PackageReference Include="AElf.Cryptography" Version="1.0.0-preview2" />
+        <PackageReference Include="AElf.Types" Version="1.0.0" />
+        <PackageReference Include="AElf.Cryptography" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
