--- a/AElf.Client.Test/AElf.Client.Test.csproj
+++ b/AElf.Client.Test/AElf.Client.Test.csproj
@@ -10,7 +10,9 @@
         <PackageReference Include="Volo.Abp.Threading" Version="2.0.1" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="Shouldly" Version="3.0.2" />
+        <PackageReference Include="xunit.runner.console" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+        <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
     </ItemGroup>
 
     <ItemGroup>
