--- a/src/AElf.Client/AElf.Client.csproj
+++ b/src/AElf.Client/AElf.Client.csproj
@@ -13,7 +13,8 @@
     <ItemGroup>
         <PackageReference Include="Volo.Abp.Autofac" Version="5.2.0" />
         <PackageReference Include="AElf.Types" Version="1.0.0" />
-      <PackageReference Include="AElf.Cryptography" Version="1.0.0" />
+        <PackageReference Include="AElf.Cryptography" Version="1.0.0" />
+        <PackageReference Include="Nethereum.KeyStore" Version="3.8.0" />
     </ItemGroup>
 
 </Project>
