--- a/examples/AEDPoSViewer/AEDPoSViewer.csproj
+++ b/examples/AEDPoSViewer/AEDPoSViewer.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\AElf.Client\AElf.Client.csproj" />
+        <ProjectReference Include="..\..\src\AElf.Client.Abp\AElf.Client.Abp.csproj" />
     </ItemGroup>
-    
+
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
