--- a/src/AElf.Client/AElf.Client.csproj
+++ b/src/AElf.Client/AElf.Client.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>AElf.Client</PackageId>
+        <PackageDescription>This is a C# client library, used to communicate with the AElf API.</PackageDescription>
+        <Company>AElf</Company>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,9 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Autofac" Version="5.2.0" />
-        <PackageReference Include="AElf.Types" Version="1.0.0" />
-        <PackageReference Include="AElf.Cryptography" Version="1.0.0" />
+        <PackageReference Include="AElf.Types" Version="1.2.0-rc-19145" />
+        <PackageReference Include="AElf.Cryptography" Version="1.2.0-rc-19145" />
         <PackageReference Include="Nethereum.KeyStore" Version="3.8.0" />
     </ItemGroup>
 
