--- a/src/AElf.Client.Abp/AElf.Client.Abp.csproj
+++ b/src/AElf.Client.Abp/AElf.Client.Abp.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>AElf.Client.Abp</PackageId>
+        <PackageDescription>C# sdk with abp module.</PackageDescription>
+        <Company>AElf</Company>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
     
     <ItemGroup>
