--- a/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
+++ b/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>AElf.Client.Protobuf</PackageId>
+        <PackageDescription>Protobuf using by AElf C# sdk.</PackageDescription>
+        <Company>AElf</Company>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
