--- a/src/AElf.Client.Abp/AElf.Client.Abp.csproj
+++ b/src/AElf.Client.Abp/AElf.Client.Abp.csproj
@@ -12,6 +12,7 @@
     
     <ItemGroup>
         <PackageReference Include="Volo.Abp.Autofac" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.AutoMapper" Version="5.2.2" />
     </ItemGroup>
     
     <ItemGroup>
