--- a/examples/TokenManager/TokenManager.csproj
+++ b/examples/TokenManager/TokenManager.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\AElf.Client.Abp.TokenManager\AElf.Client.Abp.TokenManager.csproj" />
+      <ProjectReference Include="..\..\src\AElf.Client.Abp.Token\AElf.Client.Abp.Token.csproj" />
       <ProjectReference Include="..\..\src\AElf.Client.Abp\AElf.Client.Abp.csproj" />
     </ItemGroup>
 
