Initial CrossChainService and iniital test base.

--- a/examples/AEDPoSViewer/appsettings.json
+++ b/examples/AEDPoSViewer/appsettings.json
@@ -38,8 +38,8 @@
     ]
   },
   "AElfClientConfig": {
-    "UseClientAlias": "TestNetMainChain",
-    "UseAccountAlias": "Ean",
-    "UseCamelCase": false
+    "ClientAlias": "TestNetMainChain",
+    "AccountAlias": "Ean",
+    "CamelCase": false
   }
 }
