--- a/examples/TokenManager/appsettings.json
+++ b/examples/TokenManager/appsettings.json
@@ -46,10 +46,10 @@
     "NFTContractAddress": ""
   },
   "AElfClientConfig": {
-    "UseClientAlias": "TestNetSidechain",
-    "UseMainChainClientAlias": "TestNetMainChain",
-    "UseSidechainClientAlias": "TestNetSidechain",
-    "UseAccountAlias": "eanz",
-    "UseCamelCase": false
+    "ClientAlias": "TestNetSidechain",
+    "MainChainClientAlias": "TestNetMainChain",
+    "SidechainClientAlias": "TestNetSidechain",
+    "AccountAlias": "eanz",
+    "CamelCase": false
   }
 }
