--- a/src/AElf.Client.Abp.CrossChain/AElf.Client.Abp.CrossChain.csproj
+++ b/src/AElf.Client.Abp.CrossChain/AElf.Client.Abp.CrossChain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AElf.Client.Abp\AElf.Client.Abp.csproj" />
+    </ItemGroup>
+
 </Project>
