Initial whitelist service and tests.

--- a/src/AElf.Client.Abp.Token/AElf.Client.Abp.Token.csproj
+++ b/src/AElf.Client.Abp.Token/AElf.Client.Abp.Token.csproj
@@ -12,6 +12,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AElf.Client.Abp.CrossChain\AElf.Client.Abp.CrossChain.csproj" />
       <ProjectReference Include="..\AElf.Client.Abp\AElf.Client.Abp.csproj" />
     </ItemGroup>
 
