--- a/src/AElf.Client.Abp.Whitelist/AElf.Client.Abp.Whitelist.csproj
+++ b/src/AElf.Client.Abp.Whitelist/AElf.Client.Abp.Whitelist.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AElf.Core" Version="1.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AElf.Client.Abp\AElf.Client.Abp.csproj" />
+    </ItemGroup>
+
 </Project>
