--- a/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
+++ b/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
@@ -47,6 +47,9 @@
         <Protobuf Include="Protobuf\nft_contract.proto" ProtoRoot="Protobuf">
             <Generator>MSBuild:Compile</Generator>
         </Protobuf>
+        <Protobuf Include="Protobuf\whitelist_contract.proto" ProtoRoot="Protobuf">
+            <Generator>MSBuild:Compile</Generator>
+        </Protobuf>
     </ItemGroup>
 
 </Project>
