--- a/test/AElf.Client.Abp.Test/AElf.Client.Abp.Test.csproj
+++ b/test/AElf.Client.Abp.Test/AElf.Client.Abp.Test.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\AElf.Client.Abp.Genesis\AElf.Client.Abp.Genesis.csproj" />
       <ProjectReference Include="..\..\src\AElf.Client.Abp.Token\AElf.Client.Abp.Token.csproj" />
       <ProjectReference Include="..\AElf.Client.Abp.TestBase\AElf.Client.Abp.TestBase.csproj" />
     </ItemGroup>
