--- a/src/AElf.Client.Abp.Parliament/AElf.Client.Abp.Parliament.csproj
+++ b/src/AElf.Client.Abp.Parliament/AElf.Client.Abp.Parliament.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AElf.Core" Version="1.2.0" />
+      <PackageReference Include="Volo.Abp.Core" Version="5.2.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AElf.Client.Abp\AElf.Client.Abp.csproj" />
+    </ItemGroup>
+
 </Project>
