--- a/examples/AEDPoSViewer/AEDPoSViewer.csproj
+++ b/examples/AEDPoSViewer/AEDPoSViewer.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageReference Include="Spectre.Console" Version="0.44.1-preview.0.29" />
     </ItemGroup>
 
     <ItemGroup>
