feat: Improve aedpos viewer.

--- a/examples/AEDPoSViewer/appsettings.json
+++ b/examples/AEDPoSViewer/appsettings.json
@@ -38,7 +38,7 @@
     ]
   },
   "AElfClientConfig": {
-    "ClientAlias": "MainNetSideChain1",
+    "ClientAlias": "MainNetMainChain",
     "AccountAlias": "Ean",
     "CamelCase": false
   }
