--- a/test/AElf.Client.Core.Test/AElf.Client.Core.Test.csproj
+++ b/test/AElf.Client.Core.Test/AElf.Client.Core.Test.csproj
@@ -2,19 +2,16 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-        <PackageReference Include="Volo.Abp.Threading" Version="5.2.2" />
-        <PackageReference Include="Volo.Abp.Core" Version="5.2.2" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="Shouldly" Version="4.0.3" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -26,6 +23,9 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\AElf.Client\AElf.Client.csproj" />
+        <ProjectReference Include="..\..\src\AElf.Client.Token\AElf.Client.Token.csproj" />
+        <ProjectReference Include="..\..\src\AElf.Client.Genesis\AElf.Client.Genesis.csproj" />
+        <ProjectReference Include="..\AElf.Client.TestBase\AElf.Client.TestBase.csproj" />
     </ItemGroup>
 
 </Project>
