--- a/src/AElf.Client/AElf.Client.csproj
+++ b/src/AElf.Client/AElf.Client.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="AElf.Types" Version="1.2.1" />
         <PackageReference Include="AElf.Cryptography" Version="1.2.1" />
         <PackageReference Include="Nethereum.KeyStore" Version="4.5.0" />
+        <PackageReference Include="Volo.Abp.Core" Version="5.2.2" />
     </ItemGroup>
 
 </Project>
