--- a/test/AElf.Client.Core.Test/AElf.Client.Core.Test.csproj
+++ b/test/AElf.Client.Core.Test/AElf.Client.Core.Test.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\AElf.Client.QuadraticFunding\AElf.Client.QuadraticFunding.csproj" />
         <ProjectReference Include="..\..\src\AElf.Client\AElf.Client.csproj" />
         <ProjectReference Include="..\..\src\AElf.Client.Token\AElf.Client.Token.csproj" />
         <ProjectReference Include="..\..\src\AElf.Client.Genesis\AElf.Client.Genesis.csproj" />
