--- a/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
+++ b/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <PackageId>AElf.Client.Protobuf</PackageId>
         <PackageDescription>Protobuf using by AElf C# sdk.</PackageDescription>
         <Company>AElf</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Version>1.3.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Types" Version="1.0.0" />
+        <PackageReference Include="AElf.Types" Version="1.5.0" />
         <PackageReference Include="Google.Protobuf" Version="3.19.4" />
         <PackageReference Include="Grpc.Net.Client" Version="2.46.0" />
         <PackageReference Include="Grpc.Tools" Version="2.46.1" PrivateAssets="All" />
