--- a/src/AElf.Client/AElf.Client.csproj
+++ b/src/AElf.Client/AElf.Client.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <PackageId>AElf.Client</PackageId>
         <PackageDescription>This is a C# client library, used to communicate with the AElf API.</PackageDescription>
         <Company>AElf</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Version>1.3.0</Version>
+        <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,8 +16,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Types" Version="1.2.0-rc-19145" />
-        <PackageReference Include="AElf.Cryptography" Version="1.2.0-rc-19145" />
+        <PackageReference Include="AElf.Types" Version="1.5.0" />
+        <PackageReference Include="AElf.Cryptography" Version="1.5.0" />
         <PackageReference Include="Nethereum.KeyStore" Version="3.8.0" />
     </ItemGroup>
 
