--- a/src/AElf.Client/AElf.Client.csproj
+++ b/src/AElf.Client/AElf.Client.csproj
@@ -7,7 +7,7 @@
         <PackageDescription>This is a C# client library, used to communicate with the AElf API.</PackageDescription>
         <Company>AElf</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>1.3.1</Version>
+        <Version>1.3.2</Version>
         <LangVersion>9.0</LangVersion>
     </PropertyGroup>
 
@@ -18,7 +18,7 @@
     <ItemGroup>
         <PackageReference Include="AElf.Types" Version="1.5.0" />
         <PackageReference Include="AElf.Cryptography" Version="1.5.0" />
-        <PackageReference Include="Nethereum.KeyStore" Version="3.8.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
