--- a/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
+++ b/src/AElf.Client.Protobuf/AElf.Client.Protobuf.csproj
@@ -10,7 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Types" Version="1.3.0" />
+        <PackageReference Include="AElf.Types" Version="1.6.0-beta.1" />
         <PackageReference Include="Google.Protobuf" Version="3.19.4" />
         <PackageReference Include="Grpc.Net.Client" Version="2.46.0" />
         <PackageReference Include="Grpc.Tools" Version="2.46.1" PrivateAssets="All" />
