--- a/src/AElf.Client/AElf.Client.csproj
+++ b/src/AElf.Client/AElf.Client.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.Types" Version="1.3.0" />
-        <PackageReference Include="AElf.Cryptography" Version="1.3.0" />
+        <PackageReference Include="AElf.Types" Version="1.6.0-beta.1" />
+        <PackageReference Include="AElf.Cryptography" Version="1.6.0-beta.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
